--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -1689,7 +1689,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT *\n",
+    "FROM currency\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "old_data = pd.read_sql_query(query, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1819,13 +1833,13 @@
        "[162 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "old_data"
    ]
   },
   {
