Enhance file structure

--- a/notebooks/exchange_rates_api_test.ipynb
+++ b/notebooks/exchange_rates_api_test.ipynb
@@ -1847,7 +1847,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "# Create a sqlite3 database\n",
+    "conn = sqlite3.connect('currency_rates.db')\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "query = \"\"\"\n",
+    "SELECT *\n",
+    "FROM currency\n",
+    "\"\"\"\n",
+    "data = pd.read_sql_query(query, conn)\n",
+    "print(data)"
+   ]
   }
  ],
  "metadata": {
